[project]
name = "python-fastapi-redis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.9"
dependencies = [
    "bittensor",
    "celery>=5.5.1",
    "dotenv>=0.9.9",
    "fastapi>=0.110.1",
    "notebook>=7.3.3",
    "redis>=5.2.1",
    "services>=0.1.1",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
    "worker>=2018.4.1",
]

[tool.uv.sources]
bittensor = { git = "https://github.com/opentensor/bittensor" }
